--- a/RestaurantWebApp/RestaurantWebApp/Views/Shared/_Layout.cshtml
+++ b/RestaurantWebApp/RestaurantWebApp/Views/Shared/_Layout.cshtml
@@ -17,15 +17,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Resturante 115", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("Administartor", "Administrator","Home")</li>*@
                 </ul>
+
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li>@Html.ActionLink("Login", "Login", "Access")</li>                  
+                </ul>
+
             </div>
+
+
+
+           
+
+
         </div>
     </div>
     <div class="container body-content">
@@ -33,6 +46,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>MI NOMBRE ES SAUL</p>
         </footer>
     </div>
 
