--- a/RestaurantWebApp/RestaurantWebApp/Views/Home/Administrator.cshtml
+++ b/RestaurantWebApp/RestaurantWebApp/Views/Home/Administrator.cshtml
@@ -4,13 +4,95 @@
 }
 
 
-    <form action="@Url.Content("~/RestaurantViews/Administrator")" method="post">
+@*<form action="@Url.Content("~/RestaurantViews/Administrator")" method="post">
 
         <h2>Administrator</h2>
 
 
-       
 
 
-    </form>
 
+    </form>*@
+
+<h2>Administrator</h2>
+
+
+<a class="btn btn-success" style="margin-bottom:10px"onclick="PopupForm('@Url.Action("AddOrEdit","Administrator")')"><i class="fa fa-plus"></i> Agregar</a>
+<table id="employeeTable" class="table table-striped table-bordered" style="width:100%">
+
+    <thead>
+
+        <tr>
+
+            <th>name</th>
+            <th>lastName</th>
+            <th>email</th>
+            <th>password</th>
+            <th>idRol</th>
+
+
+        </tr>
+
+    </thead>
+
+
+</table>
+
+
+<link href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+
+@section scripts{
+    
+    <script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap.min.js"></script>
+
+    <script>
+
+        var Popup, dataTable;
+
+        $(document).ready(function () {
+            dataTable = $('#employeeTable').DataTable({
+                "ajax": {
+                    "url": "./Controllers/Administrator/GetData",
+                    "type": "GET",
+                    "datatype": "json"
+                },
+                "columns": [
+                    { "data": "name" },
+                    { "data": "lastName" },
+                    { "data": "email" },
+                    { "data": "password" },
+                    { "data": "idRol" }
+                ],
+                "language": {
+                    "emptyTable":"No se ha encontrado informacion, Por favor Presione <b>el Boton para agregar </b> un nuevo registro"
+                }
+            });
+        });
+
+
+        function PopupForm(url) {
+            var formDiv = $('<div/>');
+            $.get(url).done(function (response) {
+                formDiv.html(response);
+
+                Popup = formDiv.dialog({
+                    autoOpen: true,
+                    resizable: false,
+                    title: 'Detalles de Usurio',
+                    height: 400,
+                    width: 300,
+                    close: function () {
+
+                        Popup.dialog('destroy').remove();
+
+                    }
+                });
+            });
+        }
+
+    </script>
+    
+    
+    }
