--- a/RestaurantWebApp/RestaurantWebApp/Views/Administrator/AddOrEdit.cshtml
+++ b/RestaurantWebApp/RestaurantWebApp/Views/Administrator/AddOrEdit.cshtml
@@ -3,36 +3,37 @@
     Layout = null;
 }
 
-@using (Html.BeginForm("AddOrEdit", "Administrator", FormMethod.Post))
+@using (Html.BeginForm("AddOrEdit", "Administrator", FormMethod.Post,new {onsubmit = "return SubmitForm(this)"}))
 {
     @Html.HiddenFor(model => model.id);
 
     <div class="form-group">
-        @Html.LabelFor(model => model.name, new { @class = "control-label" });
-        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } });
+        @Html.LabelFor(model => model.name, new { @class = "control-label" })
+        @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.name)
     </div>
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.lastName, new { @class = "control-label" });
-        @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } });
+        @Html.LabelFor(model => model.lastName, new { @class = "control-label" })
+        @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
     </div>
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.email, new { @class = "control-label" });
-        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } });
+        @Html.LabelFor(model => model.email, new { @class = "control-label" })
+        @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.password, new { @class = "control-label" });
-        @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } });
+        @Html.LabelFor(model => model.password, new { @class = "control-label" })
+        @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
     </div>
 
 
     <div class="form-group">
-        @Html.LabelFor(model => model.idRol, new { @class = "control-label" });
-        @Html.EditorFor(model => model.idRol, new { htmlAttributes = new { @class = "form-control" } });
+        @Html.LabelFor(model => model.idRol, new { @class = "control-label" })
+        @Html.EditorFor(model => model.idRol, new { htmlAttributes = new { @class = "form-control" } })
     </div>
 
 
