--- a/RestaurantWebApp/RestaurantWebApp/Views/Shared/_Layout.cshtml
+++ b/RestaurantWebApp/RestaurantWebApp/Views/Shared/_Layout.cshtml
@@ -57,8 +57,13 @@
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
 
+
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+
+
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
     @RenderSection("scripts", required: false)
 </body>
